<resources>
    <string name="app_name">FilmPlus</string>
    <string name="detail_activity_title">Detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">A. A. GD. Dalem Krisnayana</string>
    <string name="nav_header_subtitle">gungkrisna31@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="image_desc">Image</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>

    <string name="title">Title</string>
    <string name="empty_movie">No movie available</string>
    <string name="empty_favorite_movie">You have no favorite movie</string>
    <string name="sample_user_score">100</string>
    <string name="user_score_text">User Score</string>
    <string name="overview_title">Overview</string>
    <string name="sample_overview">this is overview</string>
    <string name="release_title">Release Date</string>
    <string name="sample_release">00–00-00</string>
    <string name="title_favorite">Favorite</string>
    <string name="empty_content_description">Empty film</string>

    <string name="search_hint">Movie name here</string>
    <string name="search_button">Search button</string>
</resources>